Checking handle wiget

--- a/odoojs/views/course_view.xml
+++ b/odoojs/views/course_view.xml
@@ -22,7 +22,7 @@
                             </page>
                             <page string="Estudiantes">
                                 <group>
-                                    <field name="student_ids"/>
+                                    <field string="Estudiantes" name="student_ids" widget="handle"/>
                                 </group>
                             </page>
                         </notebook>
