--- a/odoojs/views/course_view.xml
+++ b/odoojs/views/course_view.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
-
         <record id="course_form" model="ir.ui.view">
             <field name="name">course_form</field>
             <field name="model">odoojs.course</field>
@@ -16,12 +14,12 @@
                         </group>
                         <notebook>
                             <page string="Profesor">
-                                <group string="Informacion del curso">
+                                <group string="Informacion del Profesor">
                                     <field name="teacher_id"/>
                                 </group>
                             </page>
                             <page string="Estudiantes">
-                                <group>
+                                <group string="Informacion de los Estudiantes">
                                     <field name="student_ids"/>
                                 </group>
                             </page>
@@ -30,7 +28,6 @@
                 </form>
             </field>
         </record>
-
 
         <record id="odoojs_course_action" model="ir.actions.act_window">
             <field name="name">Cursos</field>
@@ -53,8 +50,6 @@
         <menuitem id="odoojs_course_submenu" name="Mantenimiento de cursos" parent="odoojs_course_root" sequence=""/>
         <!-- This Menu Item must have a parent and an action -->
         <menuitem id="odoojs_course_menu" name="Cursos" parent="odoojs_course_submenu" action="odoojs_course_action"
-                  sequence=""/>
-
-
+                  sequence="0"/>
     </data>
 </odoo>
