--- a/odoojs/views/templates.xml
+++ b/odoojs/views/templates.xml
@@ -1,22 +1,31 @@
 <odoo>
     <data>
-        <!-- <template id="listing"> -->
-        <!--   <ul> -->
-        <!--     <li t-foreach="objects" t-as="object"> -->
-        <!--       <a t-attf-href="#{ root }/objects/#{ object.id }"> -->
-        <!--         <t t-esc="object.display_name"/> -->
-        <!--       </a> -->
-        <!--     </li> -->
-        <!--   </ul> -->
-        <!-- </template> -->
-        <!-- <template id="object"> -->
-        <!--   <h1><t t-esc="object.display_name"/></h1> -->
-        <!--   <dl> -->
-        <!--     <t t-foreach="object._fields" t-as="field"> -->
-        <!--       <dt><t t-esc="field"/></dt> -->
-        <!--       <dd><t t-esc="object[field]"/></dd> -->
-        <!--     </t> -->
-        <!--   </dl> -->
-        <!-- </template> -->
+
+        <template id="odoojs_backend_inherit" inherit_id="web.assets_backend">
+            <xpath expr="." position="inside">
+                <script type="text/javascript" src="/odoojs/static/src/js/odoojs.js"/>
+            </xpath>
+        </template>
+
+        <template id="index">
+            <t t-call="website.layout">
+                <t t-set="title">Academy</t>
+                <!--<t t-if="{{ len(teachers) == 7  }}">-->
+                <h1 t-if="len(teachers) == 4">HOME</h1>
+                <!--</t>-->
+
+                <div class="oe_structure">
+                    <div class="container">
+                        <t t-foreach="teachers" t-as="teacher">
+                            <p>
+                                <h2 t-att="{'id':teacher.id, 'class': 'la-clase'}"/>
+                                <h2 t-esc="teacher.name"/>
+                            </p>
+                        </t>
+                    </div>
+                </div>
+            </t>
+        </template>
+
     </data>
 </odoo>
