--- a/odoojs/views/action_client_view.xml
+++ b/odoojs/views/action_client_view.xml
@@ -8,6 +8,11 @@
             <!--<field name="params" eval="{'menu_id': ref('menu_point_root')}"/>-->
         </record>
 
+         <record id="action_client_jorge" model="ir.actions.client">
+            <field name="name">Open Jorge Widget</field>
+            <field name="tag">odoojs.jorge</field>
+        </record>
+
 
         <!-- This Menu Item Must have a parent -->
         <menuitem id="odoojs_root" name="Odoojs" parent="odoojs_course_root" sequence=""/>
@@ -16,7 +21,7 @@
                   sequence=""/>
         <menuitem id="odoojs_menu_jeff" name="Jeff" parent="odoojs_root" action="action_client_odoojs"
                   sequence=""/>
-        <menuitem id="odoojs_menu_jorge" name="Jorge" parent="odoojs_root" action="action_client_odoojs"
+        <menuitem id="odoojs_menu_jorge" name="Jorge" parent="odoojs_root" action="action_client_jorge"
                   sequence=""/>
         <menuitem id="odoojs_menu_frank" name="Frank" parent="odoojs_root" action="action_client_odoojs"
                   sequence=""/>
