Add Widget Student

--- a/odoojs/views/action_client_view.xml
+++ b/odoojs/views/action_client_view.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
         <record id="action_client_odoojs" model="ir.actions.client">
             <field name="name">Open odoojs Menu</field>
             <field name="tag">odoojs.ui</field>
             <!--<field name="params" eval="{'menu_id': ref('menu_point_root')}"/>-->
         </record>
 
+        <record id="action_client_odoojs_student" model="ir.actions.client">
+            <field name="name">Open Widget Student</field>
+            <field name="tag">widget_student.ui</field>
+            <!--<field name="params" eval="{'menu_id': ref('menu_point_root')}"/>-->
+        </record>
 
         <!-- This Menu Item Must have a parent -->
         <menuitem id="odoojs_root" name="Odoojs" parent="odoojs_course_root" sequence=""/>
@@ -18,9 +22,7 @@
                   sequence=""/>
         <menuitem id="odoojs_menu_jorge" name="Jorge" parent="odoojs_root" action="action_client_odoojs"
                   sequence=""/>
-        <menuitem id="odoojs_menu_frank" name="Frank" parent="odoojs_root" action="action_client_odoojs"
+        <menuitem id="odoojs_menu_frank" name="Frank" parent="odoojs_root" action="action_client_odoojs_student"
                   sequence=""/>
-
-
     </data>
 </odoo>
