--- a/odoojs/views/action_client_view.xml
+++ b/odoojs/views/action_client_view.xml
@@ -4,35 +4,29 @@
         <record id="action_client_odoojs" model="ir.actions.client">
             <field name="name">Open odoojs Menu</field>
             <field name="tag">odoojs.ui</field>
-            <!--<field name="params" eval="{'menu_id': ref('menu_point_root')}"/>-->
         </record>
 
-         <record id="action_client_jorge" model="ir.actions.client">
+        <record id="action_client_jorge" model="ir.actions.client">
             <field name="name">Open Jorge Widget</field>
             <field name="tag">jorge.ui</field>
         </record>
 
         <record id="action_client_odoojs_student" model="ir.actions.client">
-        <field name="name">Open Widget Student</field>
-        <field name="tag">widget_student.ui</field>
+            <field name="name">Open Widget Student</field>
+            <field name="tag">widget_student.ui</field>
         </record>
-
+        
         <record id="action_client_jeff" model="ir.actions.client">
             <field name="name">Open Jeff Menu</field>
             <field name="tag">jeff.ui</field>
-            <!--<field name="params" eval="{'menu_id': ref('menu_point_root')}"/>-->
+         
         </record>
-
         <!-- This Menu Item Must have a parent -->
         <menuitem id="odoojs_root" name="Odoojs" parent="odoojs_course_root" sequence=""/>
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="odoojs_menu" name="Main Widget" parent="odoojs_root" action="action_client_odoojs"
-                  sequence=""/>
-        <menuitem id="odoojs_menu_jeff" name="Jeff" parent="odoojs_root" action="action_client_jeff"
-                  sequence=""/>
-        <menuitem id="odoojs_menu_jorge" name="Jorge" parent="odoojs_root" action="action_client_jorge"
-                  sequence=""/>
-        <menuitem id="odoojs_menu_frank" name="Frank" parent="odoojs_root" action="action_client_odoojs_student"
-                  sequence=""/>
+        <menuitem id="odoojs_menu" name="Main Widget" parent="odoojs_root" action="action_client_odoojs" sequence=""/>
+        <menuitem id="odoojs_menu_jeff" name="Jeff" parent="odoojs_root" action="action_client_jeff" sequence=""/>
+        <menuitem id="odoojs_menu_jorge" name="Jorge" parent="odoojs_root" action="action_client_jorge" sequence=""/>
+        <menuitem id="odoojs_menu_frank" name="Frank" parent="odoojs_root" action="action_client_odoojs_student" sequence=""/>
     </data>
 </odoo>
